[package]
name = "waterfall-glow-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Common dependencies
[dependencies]
anyhow = {version="*"}
cpal = {version="*", features=["jack", "oboe-shared-stdcxx"]}

egui = "0.29.*"
egui_plot = "0.29.*"
log = "*"
realfft = "*"

# eframe features for non android targets
[target.'cfg(not(target_os = "android"))'.dependencies.eframe]
version = "0.29.*"
default-features = false
features = ["accesskit", "default_fonts", "glow"]

# eframe features for android targets
[target.'cfg(target_os = "android")'.dependencies.eframe]
version = "0.29.*"
default-features = false
features = ["accesskit", "default_fonts", "glow", "android-native-activity"]

# android only dependencies
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "*"
#android-activity = { version = "0.5", features = ["native-activity"] }
winit = { version = "0.30.5", features = ["android-native-activity"] }

# native only dependencies
[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
env_logger = "0.10"

# web only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "waterfall"
path = "src/main.rs"
